added black-white images

--- a/Spostamento.html
+++ b/Spostamento.html
@@ -27,6 +27,10 @@
           width: 300;
         }
 
+        div.tabella{
+          width: 300;
+        }
+
     </style>
     <link rel="stylesheet", type="text/css", href="progress-bar.css"></style>
 
@@ -67,16 +71,16 @@
 
         <div class="footer"> <strong>STATUS GAME</strong>
 
-          <table>
-          	<tr>
-              <td><div class='widget'></div></td>
-              <td><div class="menu"></div></td>
-            </tr>
-          </table>
+          <div class="tabella">
+            <table>
+            	<tr>
+                <td><div class='widget'></div></td>
+                <td><div class="menu"></div></td>
+              </tr>
+            </table>
+          </div>
 
-        </div>
-
-        <div class="playlist" style ="float:right;background-color:black">
+          <div class="playlist" style ="float:right;background-color:black">
             <audio id="audio" src="The Avengers - Main Theme Extended.mp3" controls loop>
             </audio>
             <br>
@@ -86,6 +90,8 @@
             <button type="button" onclick = "play('THE AVENGERS_Epic Medley Orchestral Cover.mp3')">
                 Song 2
             </button>
+          </div>
+
         </div>
 
         <script src="LoadHeroes.js"></script>
