--- a/Control.html
+++ b/Control.html
@@ -1,63 +1,7 @@
 <html>
     <meta charset="utf-8">
     <title> Marvel - MCU </title>
-    <style type="text/css">
-        div { margin-left:5px; }
-
-        body { background-image: url("Serio/milky-way-small2.jpg"); background-position: 4px;}
-
-        h1 { color: red; text-align: center;}
-
-        h3 { color: white; text-align: center; }
-
-        text { fill: white; font-size: 16px;}
-
-        .score {font-size: 22px; font-weight: bold; color: white;}
-        .menu2 { font-size: 18px; color: white;}
-
-        circle.drag-drop { stroke: red; }
-
-
-        rect { fill: transparent; }
-        rect.sectionHero { fill:black; stroke: red; stroke-width: 3px;}
-
-        ellipse { fill: black; stroke: red; }
-
-        div.target { border-style:solid; border-width: 3px; border-color: red; }
-
-        div.heroes { border-style:solid; border-width: 3px; border-color: red;}
-
-        div.footer { margin-top: 7px; width:1395px; height:130px; background-color:transparent;
-            border-style:solid; border-width: 3px; border-color: red;}
-
-        table { width: 1200; margin-left: 30; margin-top: -5;}
-        table.title{ width: 200; margin-left: 35; margin-top: 4; color:white;}
-
-        table.logo { width: 900; margin-left: 300;}
-
-        td.scoreTD{ width: 300; }
-        td.time{ width: 200; }
-
-        div.time{ color:white; font-size: 18px}
-
-        div.tooltip {
-            position: absolute;
-            text-align: center;
-            width: 145px;
-            height: 35px;
-            padding: 2px;
-            font: 15px sans-serif;
-            background: lightsteelblue;
-            border: 0px;
-            border-radius: 8px;
-            pointer-events: none;
-        }
-
-        table.time{
-          width:auto;
-        }
-
-    </style>
+    <link rel="stylesheet", type="text/css", href="control.css"></style>
     <link rel="stylesheet", type="text/css", href="progress-bar.css"></style>
     <link rel="stylesheet", type="text/css", href="popup.css"></style>
     <body>
@@ -141,7 +85,7 @@
           <!-- finestra modale finale -->
             <div id="overlay">
                 <div class="popup">
-                    <h2>Hai inserito tutti i personaggi!</h2>
+                    <h2>You insert all heroes!</h2>
                     <div class="pl-left">
                         <img src="http://giphygifs.s3.amazonaws.com/media/pAUg2l9WEV3QA/giphy.gif">
                     </div>
