--- a/Control.html
+++ b/Control.html
@@ -67,7 +67,7 @@
 
                 <td>
                   <div class="playlist" style ="float:right;background-color:black">
-                    <audio id="audio" src="The Avengers - Main Theme Extended.mp3" controls loop></audio>
+                    <audio id="audio" src="The Avengers - Main Theme Extended.mp3" controls autoplay></audio>
                     <br>
                     <button type="button" onclick = "play('The Avengers - Main Theme Extended.mp3')">
                         Song 1
