--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <meta charset="utf-8">
     <title> Marvel - MCU </title>
-    <link rel="stylesheet", type="text/css", href="control.css"></style>
-    <link rel="stylesheet", type="text/css", href="progress-bar.css"></style>
-    <link rel="stylesheet", type="text/css", href="popup.css"></style>
+    <link rel="stylesheet", type="text/css", href="style/control.css"></style>
+    <link rel="stylesheet", type="text/css", href="style/progress-bar.css"></style>
+    <link rel="stylesheet", type="text/css", href="style/popup.css"></style>
     <body>
         <script src="http://d3js.org/d3.v4.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
@@ -94,11 +94,11 @@
             </div>
 
 
-        <script src="LoadHeroes.js"></script>
-        <script src="Universe.js"></script>
-        <script src="Score.js"></script>
-        <script src="detectInOut.js"></script>
-        <script type="text/javascript" src="chrono.js"></script>
+        <script src="scripts/LoadHeroes.js"></script>
+        <script src="scripts/Universe.js"></script>
+        <script src="scripts/Score.js"></script>
+        <script src="scripts/detectInOut.js"></script>
+        <script src="scripts/chrono.js"></script>
         <!-- <script type="text/javascript">
             var delay_popup = 000;
             setTimeout("document.getElementById('overlay').style.display='block'", delay_popup);
