--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="target">
-            <svg id="world" width="1260" height="595"></svg>
+            <svg id="world" width="100%" height="595"></svg>
         </div>
         <div style="clear:both;"></div>
 
